{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 125,
  "lineage": "30efa2dd-14e3-3a48-99f0-b40ead05ec2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "blueinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051835d754b74795c",
            "arn": "arn:aws:ec2:eu-central-1:291367728500:instance/i-039b81a4ac1922184",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039b81a4ac1922184",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0efb586886c84c8d5",
            "private_dns": "ip-10-0-1-165.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-121-110-36.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.110.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5195f9d8e4e45d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a9625abb465eaa",
            "tags": {
              "Name": "blue-0"
            },
            "tags_all": {
              "Name": "blue-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df2d37656c84e5cd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051835d754b74795c",
            "arn": "arn:aws:ec2:eu-central-1:291367728500:instance/i-09f442fc0d9cbaee9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f442fc0d9cbaee9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e27a3293ec86363e",
            "private_dns": "ip-10-0-1-31.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-3-127-217-6.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.217.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0839d560e3c22a36c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a9625abb465eaa",
            "tags": {
              "Name": "blue-1"
            },
            "tags_all": {
              "Name": "blue-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df2d37656c84e5cd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "greeninstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051835d754b74795c",
            "arn": "arn:aws:ec2:eu-central-1:291367728500:instance/i-0103b06d39ba23249",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0103b06d39ba23249",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a35b39bc2fabe261",
            "private_dns": "ip-10-0-1-217.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-3-120-187-88.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.187.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fec3ad6751d3239",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a9625abb465eaa",
            "tags": {
              "Name": "green-0"
            },
            "tags_all": {
              "Name": "green-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df2d37656c84e5cd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051835d754b74795c",
            "arn": "arn:aws:ec2:eu-central-1:291367728500:instance/i-0d90f275757b73eab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d90f275757b73eab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c87ca240db49bd38",
            "private_dns": "ip-10-0-1-50.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-127-221-224.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.221.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f14604081299cd44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a9625abb465eaa",
            "tags": {
              "Name": "green-1"
            },
            "tags_all": {
              "Name": "green-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df2d37656c84e5cd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:internet-gateway/igw-0ee2d2a2a87dd1171",
            "id": "igw-0ee2d2a2a87dd1171",
            "owner_id": "291367728500",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:loadbalancer/app/app/08287cd4b1b22438",
            "arn_suffix": "app/app/08287cd4b1b22438",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-528097471.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:loadbalancer/app/app/08287cd4b1b22438",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0df2d37656c84e5cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c1a9625abb465eaa"
              },
              {
                "subnet_id": "subnet-0f4f19662b558b29a"
              }
            ],
            "subnets": [
              "subnet-0c1a9625abb465eaa",
              "subnet-0f4f19662b558b29a"
            ],
            "vpc_id": "vpc-01dcc59948380781a",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.blueinstance",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alex-applb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:listener/app/app/08287cd4b1b22438/3d08263cbfde06eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 1,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7",
                        "weight": 50
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7",
                        "weight": 50
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:listener/app/app/08287cd4b1b22438/3d08263cbfde06eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:loadbalancer/app/app/08287cd4b1b22438",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.blueinstance",
            "aws_lb.app",
            "aws_lb_target_group.blue",
            "aws_lb_target_group.green",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7",
            "arn_suffix": "targetgroup/blue-tg-lb/0e145a061f4c44b7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7",
            "arn_suffix": "targetgroup/green-tg-lb/121ce93a93be6fe7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7-20221025081847094900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7",
            "target_id": "i-039b81a4ac1922184"
          },
          "dependencies": [
            "aws_instance.blueinstance",
            "aws_lb_target_group.blue",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7-20221025081847155300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/blue-tg-lb/0e145a061f4c44b7",
            "target_id": "i-09f442fc0d9cbaee9"
          },
          "dependencies": [
            "aws_instance.blueinstance",
            "aws_lb_target_group.blue",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7-20221025081847252800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7",
            "target_id": "i-0103b06d39ba23249"
          },
          "dependencies": [
            "aws_instance.greeninstance",
            "aws_lb_target_group.green",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7-20221025081847355800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:291367728500:targetgroup/green-tg-lb/121ce93a93be6fe7",
            "target_id": "i-0d90f275757b73eab"
          },
          "dependencies": [
            "aws_instance.greeninstance",
            "aws_lb_target_group.green",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.public-a",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:route-table/rtb-0afb1a9913ee54b41",
            "id": "rtb-0afb1a9913ee54b41",
            "owner_id": "291367728500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee2d2a2a87dd1171",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt"
            },
            "tags_all": {
              "Name": "rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee13115d4f2e1f02",
            "route_table_id": "rtb-0afb1a9913ee54b41",
            "subnet_id": "subnet-0c1a9625abb465eaa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078f365a22f8d7e73",
            "route_table_id": "rtb-0afb1a9913ee54b41",
            "subnet_id": "subnet-0f4f19662b558b29a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:security-group/sg-0df2d37656c84e5cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df2d37656c84e5cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "291367728500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh and html"
            },
            "tags_all": {
              "Name": "allow-ssh and html"
            },
            "timeouts": null,
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:subnet/subnet-0c43a3accfd78939c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c43a3accfd78939c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291367728500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-a"
            },
            "tags_all": {
              "Name": "subnet-private-a"
            },
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:subnet/subnet-0c1a9625abb465eaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a9625abb465eaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291367728500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-a"
            },
            "tags_all": {
              "Name": "subnet-public-a"
            },
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:subnet/subnet-0f4f19662b558b29a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f19662b558b29a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291367728500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-a"
            },
            "tags_all": {
              "Name": "subnet-public-a"
            },
            "vpc_id": "vpc-01dcc59948380781a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:291367728500:vpc/vpc-01dcc59948380781a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0220ac8228113f8b3",
            "default_route_table_id": "rtb-0891c237a51d44ef8",
            "default_security_group_id": "sg-0b353ea9125d9902d",
            "dhcp_options_id": "dopt-0b3cc6ee73e8c37c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01dcc59948380781a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0891c237a51d44ef8",
            "owner_id": "291367728500",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}